@@ -29,4 +29,4 @@ D/user////
 /index.html.in/1.25/Mon Jun 21 16:59:45 2010//
 /main.am/1.7/Mon Jun 21 16:59:45 2010//
 /project.am/1.19/Mon Jun 21 16:59:45 2010//
-/ChangeLog/1.287/Fri Aug 13 15:44:31 2010//
+/ChangeLog/1.288/Fri Aug 13 17:41:35 2010//
