@@ -3,7 +3,6 @@
 /ObjectId-32Bits.eps/1.2/Fri Nov  7 15:02:53 2008//
 /ObjectId-32Bits.png/1.2/Fri Nov  7 15:02:54 2008/-kb/
 /c_user.texi/1.32/Mon Nov  9 14:36:14 2009//
-/dirstat.texi/1.13/Thu Nov 13 15:10:36 2008//
 /example.texi/1.12/Thu Apr  5 15:27:18 2007//
 /glossary.texi/1.7/Thu Jan 17 21:47:47 2002//
 /preface.texi/1.18/Mon Nov  9 14:36:14 2009//
@@ -18,7 +17,6 @@
 /states.png/1.1/Wed Oct  6 17:50:07 1999//
 /states.txt/1.1/Fri Jan 20 09:20:02 2006//
 /.cvsignore/1.14/Mon Jun 21 16:59:45 2010//
-/Makefile.am/1.27/Mon Jun 21 16:59:45 2010//
 /stamp-vti/1.10/Fri Jun 11 07:45:46 2010//
 /version.texi/1.10/Fri Jun 11 07:45:46 2010//
 /barrier.t/1.5/Thu Jul  8 17:32:51 2010//
@@ -49,4 +47,6 @@
 /userext.t/1.22/Thu Jul  8 17:32:51 2010//
 /chains.t/1.9/Fri Aug 13 15:44:31 2010//
 /part.t/1.20/Fri Aug 13 15:44:31 2010//
+/Makefile.am/1.28/Fri Aug 13 17:41:39 2010//
+/dirstat.texi/1.14/Fri Aug 13 17:41:39 2010//
 D
