@@ -3,11 +3,11 @@
 @c  On-Line Applications Research Corporation (OAR).
 @c  All rights reserved.
 @c
-@c  $Id: dirstat.texi,v 1.13 2008/11/13 15:10:36 joel Exp $
+@c  $Id: dirstat.texi,v 1.14 2010/08/13 17:31:37 joel Exp $
 @c
 
 @ifinfo
-@node Directive Status Codes, Example Application, Chains Prepend a Node (unprotected), Top
+@node Directive Status Codes, Example Application, Chains Prepend a Node, Top
 @end ifinfo
 @chapter Directive Status Codes
 @table @b
